# Miku-versi

./: .gitignore  backup-minimal.bat  capacitor.config.json  package-lock.json  package.json  push-github.bat  run.bat
.github/workflows/: android-apk.yml
electron/: main.js
scripts/: apply-icons.js  build.js  check.js  setup-android-signing.ps1
src/: index.html  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/css/: styles.css
src/js/: ai.js  app.js  disc3d.js  othello.js  scene3d.js  threeScene.js
